--- a/.github/workflows/coverage-tarp.yml
+++ b/.github/workflows/coverage-tarp.yml
@@ -17,6 +17,11 @@ jobs:
       image:                    xd009642/tarpaulin:develop-nightly
       options:                  --security-opt seccomp=unconfined
     steps:
+      - uses: actions/checkout@v2
+      # Start Docker Compose
+      - name: Start Docker Compose
+        run: docker-compose up -d
+
       - name:                   Checkout repository
         uses:                   actions/checkout@v2
 
