--- a/.github/workflows/coverage2.yml
+++ b/.github/workflows/coverage2.yml
@@ -1,15 +1,12 @@
-name: Custom Build and Coverage
+name: Coverage2
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: [pull_request, push]
 
 jobs:
-  run_rust_tests:
-    name: Run rust test
+  coverage2:
     runs-on: ubuntu-latest
+    env:
+      CARGO_TERM_COLOR: always
     steps:
       - uses: actions/checkout@v2
       # Start Docker Compose
@@ -22,9 +19,10 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate code coverage
-        run: |
-          cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
-          cat lcov.info
-        env:
-          SQLX_OFFLINE: true # needed to keep it from trying to connect to a database
-
+        run: cargo llvm-cov --lcov --output-path lcov.info
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: lcov.info
+          fail_ci_if_error: true
