--- a/.github/workflows/coverage-2.yml
+++ b/.github/workflows/coverage-2.yml
@@ -27,11 +27,11 @@ jobs:
 
       - name: Start containers
         run: docker compose up -d
-      - name: Install self signed certificate
-        run: |
-          until [ -f ./resources/test/certs/cert.pem ]; do sleep 1; done
-          sudo cp ./resources/test/certs/cert.pem /usr/local/share/ca-certificates/localhost.crt && sudo update-ca-certificates
-        timeout-minutes: 1
+      # - name: Install self signed certificate
+      #   run: |
+      #     until [ -f ./resources/test/certs/cert.pem ]; do sleep 1; done
+      #     sudo cp ./resources/test/certs/cert.pem /usr/local/share/ca-certificates/localhost.crt && sudo update-ca-certificates
+      #   timeout-minutes: 1
       - name: Run integration tests
         run: cargo llvm-cov test --verbose --test '*'  --lcov --output-path lcov.integration-tests.info
         env:
