--- a/.github/workflows/coverage2.yml
+++ b/.github/workflows/coverage2.yml
@@ -20,6 +20,8 @@ jobs:
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate code coverage
         run: cargo llvm-cov --lcov --output-path lcov.info
+        env:
+          SQLX_OFFLINE: true # needed to keep it from trying to connect to a database
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
