--- a/.github/workflows/coverage-tarp.yml
+++ b/.github/workflows/coverage-tarp.yml
@@ -19,7 +19,7 @@ jobs:
         run: docker-compose up -d
       - name:                   Generate code coverage
         run: |
-          cargo +nightly tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
+          cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
 
       - name:                   Upload to codecov.io
         uses:                   codecov/codecov-action@v2
