--- a/.github/workflows/coverage2.yml
+++ b/.github/workflows/coverage2.yml
@@ -16,10 +16,24 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Rust
         run: rustup update stable
+      # Cache dependencies and build artifacts
+      - name: Cache build artifacts and dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+        env:
+          SQLX_OFFLINE: true
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate code coverage
-        run: cargo llvm-cov --lcov --output-path lcov.info
+        run: cargo llvm-cov --no-clean --all-features --frozen --lcov --output-path lcov.info
         env:
           SQLX_OFFLINE: true # needed to keep it from trying to connect to a database
       - name: Upload coverage to Codecov
