--- a/.github/workflows/coverage-tarp.yml
+++ b/.github/workflows/coverage-tarp.yml
@@ -11,12 +11,14 @@ on:
     branches: [ master ]
 jobs:
   citarp:
-    runs-on:                    ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       # Start Docker Compose
       - name: Start Docker Compose
         run: docker-compose up -d
+      - name: Install cargo tarpaulin
+        uses: taiki-e/install-action@cargo-tarpaulin
       - name:                   Generate code coverage
         run: |
           cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
