--- a/.github/workflows/coverage2.yml
+++ b/.github/workflows/coverage2.yml
@@ -17,25 +17,24 @@ jobs:
       - name: Install Rust
         run: rustup update stable
       # Cache dependencies and build artifacts
-      - name: Cache build artifacts and dependencies
-        uses: actions/cache@v2
+      - uses: Swatinem/rust-cache@v2
+      - uses: taiki-e/cache-cargo-install-action@v1
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          tool: sqlx-cli
       - uses: actions-rs/cargo@v1
         with:
           command: build
         env:
+          SQLX_VERSION: 0.6.0
           SQLX_OFFLINE: true
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate code coverage
         run: cargo llvm-cov --no-clean --all-features --frozen --lcov --output-path lcov.info
         env:
-          SQLX_OFFLINE: true # needed to keep it from trying to connect to a database
+          SQLX_VERSION: 0.6.0
+          SQLX_OFFLINE: true
+          
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
