--- a/.env
+++ b/.env
@@ -65,6 +65,7 @@ GOOGLE_CLIENT_ID=none
 GOOGLE_CLIENT_SECRET=none
 
 PAYPAL_API_URL=https://api-m.sandbox.paypal.com/v1/
+PAYPAL_WEBHOOK_ID=none
 PAYPAL_CLIENT_ID=none
 PAYPAL_CLIENT_SECRET=none
 
