--- a/.env
+++ b/.env
@@ -71,7 +71,9 @@ PAYPAL_CLIENT_SECRET=none
 
 STEAM_API_KEY=none
 
+TREMENDOUS_API_URL=https://testflight.tremendous.com/api/v2/
 TREMENDOUS_API_KEY=none
+TREMENDOUS_PRIVATE_KEY=none
 
 TURNSTILE_SECRET=none
 
