--- a/.env
+++ b/.env
@@ -74,6 +74,7 @@ STEAM_API_KEY=none
 TREMENDOUS_API_URL=https://testflight.tremendous.com/api/v2/
 TREMENDOUS_API_KEY=none
 TREMENDOUS_PRIVATE_KEY=none
+TREMENDOUS_CAMPAIGN_ID=none
 
 TURNSTILE_SECRET=none
 
