--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,7 @@ woothee = "0.13.0"
 lettre = "0.10.4"
 
 derive-new = "0.5.9"
+rust_iso3166 = "0.1.11"
 
 [dev-dependencies]
 actix-http = "3.4.0"
