--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DEBUG=true
 RUST_LOG=info,sqlx::query=warn
 SENTRY_DSN=none
 
+READ_ONLY=false
 SITE_URL=https://modrinth.com
 CDN_URL=https://staging-cdn.modrinth.com
 LABRINTH_ADMIN_KEY=feedbeef
@@ -9,7 +10,7 @@ RATE_LIMIT_IGNORE_KEY=feedbeef
 
 DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
 DATABASE_MIN_CONNECTIONS=0
-DATABASE_MAX_CONNECTIONS=16
+DATABASE_-MAX_CONNECTIONS=16
 
 MEILISEARCH_ADDR=http://localhost:7700
 MEILISEARCH_KEY=modrinth
