--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,6 +108,8 @@ lettre = "0.11.3"
 derive-new = "0.6.0"
 rust_iso3166 = "0.1.11"
 
+jemallocator = "0.3.2"
+
 [dev-dependencies]
 actix-http = "3.4.0"
 json-patch = "*"
