--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,7 +108,7 @@ lettre = "0.11.3"
 derive-new = "0.6.0"
 rust_iso3166 = "0.1.11"
 
-jemallocator = "0.3.2"
+jemallocator = {version = "0.3.2", optional = true}
 
 [dev-dependencies]
 actix-http = "3.4.0"
@@ -118,3 +118,6 @@ opt-level = 0                # Minimal optimization, speeds up compilation
 lto = false                  # Disables Link Time Optimization
 incremental = true           # Enables incremental compilation
 codegen-units = 16           # Higher number can improve compile times but reduce runtime performance
+
+[features]
+jemalloc = ["jemallocator"]
