--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ axum = { version = "0.7.4", features = ["json", "form", "multipart", "query", "w
 axum-prometheus = "0.5.0"
 
 # middleware + utils
-sentry = { version = "0.32.1", features = ["tracing"] }
+sentry = { version = "0.32.1", features = ["tracing", "tower"] }
 sentry-tower = "0.32.1"
-tower-http = {  version = "0.5.0", features = ["cors", "compression-br", "sensitive-headers", "fs"] }
+tower-http = {  version = "0.5.0", features = ["cors", "sensitive-headers", "fs", "compression-zstd", "compression-gzip", "compression-deflate", "compression-br"] }
 tower = "0.4.13"
 
 # tracing
