--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,26 +11,19 @@ name = "labrinth"
 path = "src/main.rs"
 
 [dependencies]
-# actix = "0.13.1"
-# actix-web = "4.4.1"
-# actix-rt = "2.9.0"
-# actix-multipart = "0.6.1"
-# actix-cors = "0.7.0"
-# actix-ws = "0.2.5"
-# actix-files = "0.6.5"
-# actix-web-prom = "0.7.0"
 axum = { version = "0.7.4", features = ["json", "form", "multipart", "query", "ws", "macros"] }
 axum-prometheus = "0.5.0"
 
 # middleware + utils
-sentry = { version = "0.32.1", features = ["tracing", "tower"] }
+sentry = { version = "0.32.1", features = ["tracing", "tower", "tower-http"] }
 sentry-tower = "0.32.1"
-tower-http = {  version = "0.5.0", features = ["cors", "sensitive-headers", "fs", "compression-zstd", "compression-gzip", "compression-deflate", "compression-br"] }
+tower-http = {  version = "0.5.0", features = ["trace", "cors", "sensitive-headers", "fs", "compression-zstd", "compression-gzip", "compression-deflate", "compression-br"] }
 tower = "0.4.13"
+governor = "0.6.0"
 
 # tracing
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 tokio = { version = "1.35.1", features = ["sync"] }
 tokio-stream = "0.1.14"
@@ -81,8 +74,6 @@ censor = "0.3.0"
 spdx = { version = "0.10.3", features = ["text"] }
 
 dotenvy = "0.15.7"
-log = "0.4.20"
-env_logger = "0.10.1"
 thiserror = "1.0.56"
 
 sqlx = { version = "0.7.3", features = [
