--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tokio-stream = "0.1.14"
 
 futures = "0.3.30"
 futures-timer = "3.0.2"
+futures-lite = "1.13.0"
 async-trait = "0.1.70"
 dashmap = "5.4.0"
 lazy_static = "1.4.0"
@@ -112,6 +113,8 @@ derive-new = "0.6.0"
 
 # country list
 rust_iso3166 = "0.1.11"
+
+multer = "3.0.0"
 
 [dev-dependencies]
 axum-test = "14.2.2"
