--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ axum = { version = "0.7.4", features = ["json", "form", "multipart", "query", "w
 axum-prometheus = "0.5.0"
 
 # middleware + utils
-sentry = { version = "0.32.1", features = ["tracing", "tower", "tower-http"] }
-sentry-tower = { version = "0.32.1", features = ["axum-matched-path"] }
+sentry = { version = "0.32.1", features = ["tracing", "tower", "tower-http", "tower-axum-matched-path"] }
 tower-http = {  version = "0.5.0", features = ["trace", "cors", "sensitive-headers", "fs", "compression-zstd", "compression-gzip", "compression-deflate", "compression-br"] }
 tower = "0.4.13"
 governor = "0.6.0"
