--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 codecov.json
+dhat-heap.json
 
 # Created by https://www.gitignore.io/api/rust,clion
 # Edit at https://www.gitignore.io/?templates=rust,clion
