--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DEBUG=true
 RUST_LOG=info,sqlx::query=warn
 SENTRY_DSN=none
 
-SITE_URL=https://staging.modrinth.com
+SITE_URL=https://modrinth.com
 CDN_URL=https://staging-cdn.modrinth.com
 LABRINTH_ADMIN_KEY=feedbeef
 RATE_LIMIT_IGNORE_KEY=feedbeef
