[wip] Payments/subscriptions support

--- a/.env
+++ b/.env
@@ -84,6 +84,7 @@ SMTP_HOST=none
 
 SITE_VERIFY_EMAIL_PATH=none
 SITE_RESET_PASSWORD_PATH=none
+SITE_BILLING_PATH=none
 
 BEEHIIV_PUBLICATION_ID=none
 BEEHIIV_API_KEY=none
@@ -100,3 +101,6 @@ MAXMIND_LICENSE_KEY=none
 PAYOUTS_BUDGET=100
 
 FLAME_ANVIL_URL=none
+
+STRIPE_API_KEY=none
+STRIPE_WEBHOOK_SECRET=none
