Integrate with Aditude API for payouts

--- a/.env
+++ b/.env
@@ -98,9 +98,9 @@ CLICKHOUSE_DATABASE=staging_ariadne
 
 MAXMIND_LICENSE_KEY=none
 
-PAYOUTS_BUDGET=100
-
 FLAME_ANVIL_URL=none
 
 STRIPE_API_KEY=none
 STRIPE_WEBHOOK_SECRET=none
+
+ADITUDE_API_KEY=none
